# raze

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: lib.md  main.md
docs/cli/: args.md  commands.md  mod.md
docs/core/: compress.md  decompress.md  mod.md
docs/utils/: errors.md  logger.md  mod.md
scripts/: format.sh
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/core/: compress.rs  decompress.rs  mod.rs
src/utils/: errors.rs  logger.rs  mod.rs  security.rs
tests/: cli.rs  compression.rs
